--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Something</title>
+    <title>For Elly.</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css" />
   </head>
 
@@ -9,6 +10,11 @@
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
+    <form class="js-form form">
+      <input type="text" placeholder="반갑습니다. 이름을 입력해주세요!" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
     <script src="clock.js"></script>
+    <script src="greeting.js"></script>
   </body>
 </html>
