--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+
+    <!-- Latest compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" /> -->
+    <!-- Latest Sortable -->
+    <script src="http://SortableJS.github.io/Sortable/Sortable.js"></script>
   </head>
 
   <body>
@@ -20,7 +25,7 @@
     <form class="js-toDoForm form">
       <input class="todo-input" type="text" placeholder="해야할 일을 등록하세요." />
     </form>
-    <div class="js-toDoList"></div>
+    <div id="simpleList" class="js-toDoList"></div>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
