--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Latest compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" /> -->
     <!-- Latest Sortable -->
-    <script src="http://SortableJS.github.io/Sortable/Sortable.js"></script>
+    <script src="Sortable.js"></script>
   </head>
 
   <body>
