순서변경 기능 변경.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <form class="js-toDoForm form">
       <input class="todo-input" type="text" placeholder="해야할 일을 등록하세요." />
     </form>
+    <label class="checkbox-container">
+      순서변경
+      <input type="checkbox" id="sort" />
+      <span class="checkmark"></span>
+    </label>
     <div id="simpleList" class="js-toDoList"></div>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
